# rule-coherence-graph

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  fly-deploy.yml  publish.yml
benchmarks/: RESULTS.md  dataset.jsonl
docs/: RELEASING.md  SPEC.md  benchmark.md  concepts.md  hosted-mcp.md  index.md  mcp-clients.md  providers.md  quickstart.md
docs/blog/: postmortem-medium.md  share-kit.md
examples/gemini_incident/: CLAUDE.md  memory.md
examples/gemini_incident/.agent/rules/: antigravity-pack.md  smuggled-vi.md
examples/policy_conflicts/: CLAUDE.md  access.cedar  deploy.rego
examples/synthetic_conflicts/: .cursorrules  README.md  rules.yaml
examples/synthetic_conflicts/rules/: deploy.mdc
scripts/: smoke_test.py
site/: 404.html  index.html  sitemap.xml
site/RELEASING/: index.html
site/SPEC/: index.html
site/benchmark/: index.html
site/mcp-clients/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/rcg/: baseline.py  benchmark.py  cli.py  explain.py  mcp_guard.py  mcp_server.py  metrics.py  schema.py  scoring.py
src/rcg/detectors/: base.py  precedence.py  semantic.py  syntactic.py
src/rcg/extractors/: _schema.py  anthropic_provider.py  cache.py  extract.py  mock_provider.py  openai_provider.py
src/rcg/graph/: loader.py  queries.py
src/rcg/parsers/: base.py  cedar.py  cursorrules.py  discovery.py  markdown_rules.py  mdc.py  opa_rego.py  structured.py
src/rcg/providers/: embedding.py  llm.py
src/rcg/reports/: markdown.py
tests/: conftest.py
tests/integration/: test_gemini_incident_mock.py  test_neo4j_loader.py  test_policy_conflicts.py  test_synthetic_conflicts.py
tests/unit/: test_baseline.py  test_benchmark.py  test_cli_benchmark.py  test_cli_explain.py  test_cli_passes.py  test_cli_provider.py  test_detector_precedence.py  test_detector_semantic.py  test_detector_syntactic.py  test_discovery_multiformat.py  test_explain.py  test_extractor.py  test_mcp_guard.py  test_mcp_http.py  test_mcp_server.py  test_metrics.py  test_openai_provider.py  test_parser_cedar.py  test_parser_cursorrules.py  test_parser_markdown.py  test_parser_mdc.py  test_parser_opa_rego.py  test_parser_structured.py  test_providers_embedding.py  test_report_markdown.py  test_schema.py  test_scoring.py
