[project]
name = "rcg"
version = "0.1.0"
description = "Rule Coherence Graph — detect conflicts in AI agent rule corpora."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "neo4j>=5.20",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
rcg = "rcg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (typer.Argument/typer.Option)
# as parameter defaults; B008 is a false positive for this idiom.
"src/rcg/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/rcg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
