[project]
name = "rule-coherence-graph"
version = "0.4.0"
description = "Rule Coherence Graph — detect conflicts in AI agent rule corpora."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Howard Wang" }]
keywords = [
    "ai-agents",
    "llm",
    "rules",
    "linter",
    "governance",
    "neo4j",
    "cursor",
    "claude-code",
    "coherence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "neo4j>=5.20",
    "anthropic>=0.40",
    "pyyaml>=6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "mcp>=1.2",
    "types-PyYAML",
]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
rcg = "rcg.cli:app"
rcg-mcp = "rcg.mcp_server:main"

[project.urls]
Homepage = "https://github.com/alast9/rule-coherence-graph"
Repository = "https://github.com/alast9/rule-coherence-graph"
Issues = "https://github.com/alast9/rule-coherence-graph/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (typer.Argument/typer.Option)
# as parameter defaults; B008 is a false positive for this idiom.
"src/rcg/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/rcg"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# sentence-transformers lives only in the optional `embeddings` extra and ships no
# type stubs; ignore it unconditionally so mypy is green whether or not the extra
# is installed (no brittle inline `type: ignore` that flips to "unused").
[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
